--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <button id="clear-grid">Clear Grid</button>
           <input type="color" id="color-input" />
           <button id="erase-btn">Erase</button>
+          <button id="erase-all">Erase All</button>
           <button id="paint-btn">Paint</button>
         </div>
       </div>
